fix uneven margin

--- a/src/scenes/portfolio/work_experiences/w40001/style.scss
+++ b/src/scenes/portfolio/work_experiences/w40001/style.scss
@@ -47,6 +47,7 @@ $COLOR_WORK_EXPERIENCE_THEME: #40B588;
     padding: 1rem;
 
     .testimonial-recommender {
+      margin-bottom: 1rem;
       .name {
         padding: 0;
         margin: 0;
